samples/_failures_safe/1761242612_08abbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f5f4652.c: In function ‘main’:
./samples/SAFE/__tmp_7f5f4652.c:164:5: error: expected expression at end of input
  164 |     for (int start = 0; start < g.node_count && start < 3;
      |     ^~~
./samples/SAFE/__tmp_7f5f4652.c:164:5: error: expected declaration or statement at end of input
